--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/cogniarium_db
       # Address where the backend will reach the AI service
       - HUGGINGFACE_API_URL=http://ai-service:8000/analyze
+      # Backend base URL for callback construction (used by AI service to call back)
+      - BACKEND_BASE_URL=http://backend:8080
     depends_on:
       db:
         condition: service_healthy
