feat: Add summarization feature with new model integration, callback handling, and frontend updates for displaying summaries

--- a/cogniariumbackend/src/main/resources/application.yaml
+++ b/cogniariumbackend/src/main/resources/application.yaml
@@ -21,3 +21,4 @@ backend:
   callbacks:
     sentiment: /api/callbacks/sentiment
     title: /api/callbacks/title
+    summary: /api/callbacks/summary
