feat: Implement note editing and deletion functionality, integrate AI service for note updates, and enhance frontend components for better user interaction

--- a/cogniariumbackend/src/main/resources/application.yaml
+++ b/cogniariumbackend/src/main/resources/application.yaml
@@ -9,8 +9,8 @@ spring:
 webclient:
   max-in-memory-size: 16MB
 
-# Hugging Face Configuration
-huggingface:
+# AI Service Configuration
+aiservice:
   api:
     url: http://localhost:8000/analyze
     timeout: 60000
