--- a/cogniarium-frontend/package.json
+++ b/cogniarium-frontend/package.json
@@ -3,11 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/vite": "^4.1.18",
@@ -15,15 +10,27 @@
     "lucide-vue-next": "^0.562.0",
     "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.18",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^25.0.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vitest": "^2.1.8",
     "vue-tsc": "^3.1.4"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   }
 }
