--- a/cogniariumbackend/src/main/resources/application-prod.yml
+++ b/cogniariumbackend/src/main/resources/application-prod.yml
@@ -26,6 +26,28 @@ spring:
     compose:
       enabled: false
 
+  # Mail Configuration for Production
+  # Configure SMTP settings via environment variables
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 10000
+          timeout: 10000
+          writetimeout: 10000
+          ssl:
+            trust: ${MAIL_SMTP_SSL_TRUST:}
+    # Sender email address (should be a verified sender in your SMTP provider)
+    from: ${MAIL_FROM}
+
 # Logging Configuration
 logging:
   level:
